--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,9 @@
   <body>
 
   <div style="width: 980px; margin: 0 auto;">
+      <% flash.each do |k,v| %>
+          <%= content_tag(:div, v, class:"alert-box alert") %>
+      <% end %>
   <%= yield %>
 
   <%= debug(params) if Rails.env.development? %>
