--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -2,4 +2,14 @@
 
 <p>Find me in app/views/static_pages/top.html.erb</p>
 
+<p>
+<% if logged_in? %>
+    Hello, <%= current_user.name %>
+<% else %>
+    Please <%= link_to "Log in", login_path %>.
+<% end %>
+</p>
 
+<% if logged_in? %>
+    <% # <p><%= link_to "Log out", logout_path, method: :delete </p> %>
+<% end %>
