--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,3 +7,12 @@
 
 <p>Email: <%= @user.email %></p>
 
+<% if logged_in? %>
+  <p>
+  <%= link_to "Log out",
+      { :controller => 'sessions', :action => 'destroy' },
+      { :method => 'delete' }
+  %>
+  </p>
+<% end %>
+
